--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "scripts": {
         "build": "turbo run build",
         "test": "turbo run test",
-        "db:migrate": "prisma migrate dev"
+        "db:migrate": "prisma migrate dev",
+        "postinstall": "npx prisma generate --schema=packages/database/schema.prisma"
     },
     "devDependencies": {
         "turbo": "^1.10.0",
