--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     ],
     "scripts": {
         "build": "turbo run build",
+        "build:all": "npm run build:web && npm run build:api",
+        "build:api": "cd apps/api && npm run build",
+        "build:web": "cd apps/web && npm run build",
         "test": "turbo run test",
         "db:migrate": "prisma migrate dev",
         "postinstall": "npx prisma generate --schema=packages/database/schema.prisma"
