--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,18 @@
 {
-    "version": 2,
+    "$schema": "https://openapi.vercel.sh/vercel.json",
+    "buildCommand": "cd apps/web && npm install && npm run build",
+    "outputDirectory": "apps/web/dist",
     "framework": null,
-    "builds": [
+    "rewrites": [
         {
-            "src": "apps/web/package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "dist"
-            }
-        },
-        {
-            "src": "apps/api/src/main.ts",
-            "use": "@vercel/node"
+            "source": "/api/:path*",
+            "destination": "/api/:path*"
         }
     ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/apps/api/src/main.ts"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/apps/web/dist/$1"
+    "functions": {
+        "apps/api/src/main.ts": {
+            "memory": 1024,
+            "maxDuration": 30
         }
-    ]
+    }
 }
