--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,26 @@
 {
-    "$schema": "https://openapi.vercel.sh/vercel.json",
-    "buildCommand": "cd apps/web && npm install && npm run build",
-    "outputDirectory": "apps/web/dist",
-    "framework": null,
-    "rewrites": [
+    "version": 2,
+    "builds": [
         {
-            "source": "/api/:path*",
-            "destination": "/api/:path*"
+            "src": "api/index.ts",
+            "use": "@vercel/node"
+        },
+        {
+            "src": "apps/web/package.json",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "dist"
+            }
         }
     ],
-    "functions": {
-        "apps/api/src/main.ts": {
-            "memory": 1024,
-            "maxDuration": 30
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "/api/index.ts"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/apps/web/dist/$1"
         }
-    }
+    ]
 }
