--- a/vercel.json
+++ b/vercel.json
@@ -19,11 +19,19 @@
             "dest": "/api/index.ts"
         },
         {
-            "handle": "filesystem"
-        },
-        {
             "src": "/assets/(.*)",
             "dest": "/apps/web/dist/assets/$1"
+        },
+        {
+            "src": "/favicon.ico",
+            "dest": "/apps/web/dist/favicon.ico"
+        },
+        {
+            "src": "/robots.txt",
+            "dest": "/apps/web/dist/robots.txt"
+        },
+        {
+            "handle": "filesystem"
         },
         {
             "src": "/(.*)",
